Advent 2025 - Add day parsing / Improve UI